--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
-name: UnstoppableGamersMod
+name: TotalFreedomMod
 main: me.totalfreedom.totalfreedommod.TotalFreedomMod
 version: ${tfm.build.version}
 description: Plugin for the UnstoppableGamers server.
